[gd_scene load_steps=7 format=2]

[ext_resource path="res://props/shooter.png" type="Texture" id=1]
[ext_resource path="res://props/shooter.gd" type="Script" id=2]
[ext_resource path="res://pieces/shift_detector.tscn" type="PackedScene" id=3]
[ext_resource path="res://pieces/hitbox_octagon.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "shoot"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "shoot"
} ]
}

[node name="shooter" type="Node2D"]
script = ExtResource( 2 )

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 8

[node name="barrel" type="Position2D" parent="."]
position = Vector2( 8, 0 )

[node name="animator" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/shoot = SubResource( 2 )

[node name="shift_detector" parent="." instance=ExtResource( 3 )]

[node name="hitbox" parent="shift_detector" instance=ExtResource( 4 )]

[node name="timer" type="Timer" parent="."]
one_shot = true

[connection signal="shifted" from="shift_detector" to="." method="get_shifted"]
[connection signal="timeout" from="timer" to="." method="_on_timer_timeout"]
